tests/kyverno-policies/add-nodeselector/ondemand-nodeselector-mutated.yaml
apiVersion: v1
kind: Pod
metadata:
  name: test-ondemand-nodeselector
  namespace: user-test
spec:
  containers:
  - image: nginx:latest
    name: nginx
  nodeSelector:
    osc.edu/role: ondemand
