tests/kyverno-policies/add-nodeselector/paas-nodeselector-mutated.yaml
apiVersion: v1
kind: Pod
metadata:
  name: test-paas-nodeselector
  namespace: paas
spec:
  containers:
  - image: nginx:latest
    name: nginx
  nodeSelector:
    node-role.kubernetes.io/paas: ''
