tests/kyverno-policies/add-nodeselector/resources.yaml
---
apiVersion: v1
kind: Pod
metadata:
  name: test-ondemand-nodeselector
  namespace: user-test
spec:
  containers:
    - name: nginx
      image: nginx:latest
---
apiVersion: v1
kind: Pod
metadata:
  name: test-paas-nodeselector
  namespace: paas
spec:
  containers:
    - name: nginx
      image: nginx:latest
---
apiVersion: v1
kind: Pod
metadata:
  name: test-webservice-nodeselector
  namespace: webservice
spec:
  containers:
    - name: nginx
      image: nginx:latest
