tests/kyverno-policies/add-nodeselector/webservice-nodeselector-mutated.yaml
---
apiVersion: v1
kind: Pod
metadata:
  name: test-webservice-nodeselector
  namespace: webservice
spec:
  containers:
    - name: nginx
      image: nginx:latest
  nodeSelector:
    node-role.kubernetes.io/webservices: ''
