tests/kyverno-policies/add-nodeselector/kyverno-test.yaml
---
apiVersion: cli.kyverno.io/v1alpha1
kind: Test
metadata:
  name: ondemand
policies:
  - policy.yaml
resources:
  - resources.yaml
results:
  - policy: add-nodeselector
    rule: ondemand-nodeselector
    resources:
      - test-ondemand-nodeselector
    patchedResources: ondemand-nodeselector-mutated.yaml
    kind: Pod
    result: pass
  - policy: add-nodeselector
    rule: webservice-nodeselector
    resources:
      - test-webservice-nodeselector
    patchedResources: webservice-nodeselector-mutated.yaml
    kind: Pod
    result: pass
  - policy: add-nodeselector
    rule: paas-nodeselector
    resources:
      - test-paas-nodeselector
    patchedResources: paas-nodeselector-mutated.yaml
    kind: Pod
    result: pass
  - policy: add-nodeselector
    rule: paas-nodeselector
    resources:
      - test-webservice-nodeselector
    kind: Pod
    result: skip
